[package]
name = "custom-jay-tray-item"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jay-tray-item"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
wl-client = "0.2"
memfile = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[build-dependencies]
wl-client-builder = "0.2"
